# xdg-base-dirs

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  noxfile.py  pylintrc  pyproject.toml  setup.cfg  setup.py  test_xdg.py  xdg.py
.github/workflows/: ci.yml
src/: xdg.py
src/xdg/: __init__.py
src/xdg_base_dirs/: __init__.py
test/: test_xdg.py  test_xdg_base_dirs.py
tests/: test_xdg_base_dirs.py
