[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.poetry]
name = "xdg"
version = "6.0.0"
description = "Variables defined by the XDG Base Directory Specification"
authors = ["Scott Stevenson <scott@stevenson.io>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/srstevenson/xdg-base-dirs"
repository = "https://github.com/srstevenson/xdg-base-dirs"
keywords = ["xdg", "base", "directory", "specification"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]
include = ["LICENCE", "src/xdg/py.typed"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
flake8 = "^5.0.4"
isort = "^5.11.5"
mypy = "^0.991"
nox = "^2022.11.21"
pylint = "^2.13.9"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pyupgrade = "^3.3.1"
flake8-pytest-style = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
