[tool.poetry]
name = "xdg-base-dirs"
version = "6.0.1"
description = "Variables defined by the XDG Base Directory Specification"
authors = ["Scott Stevenson <scott@stevenson.io>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/srstevenson/xdg-base-dirs"
repository = "https://github.com/srstevenson/xdg-base-dirs"
keywords = ["xdg", "base", "directory", "specification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]
include = ["src/xdg_base_dirs/py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.0.1"
poethepoet = ">=0.22.0"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
ruff = ">=0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poe.tasks]
_ruff_fix = "ruff --fix ."
_ruff_fmt = "ruff format ."
fmt = ["_ruff_fix", "_ruff_fmt"]

_ruff_fmt_check = "ruff format --check ."
_ruff_check = "ruff ."
_mypy = "mypy ."
lint = ["_ruff_fmt_check", "_ruff_check", "_mypy"]

test = "pytest tests"
check = ["lint", "test"]

[tool.pytest.ini_options]
addopts = "--cov=xdg_base_dirs --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "INP001", "ISC001", "S101"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.isort]
split-on-trailing-comma = false
