[project]
name = "xdg-base-dirs"
version = "6.0.2"
description = "Variables defined by the XDG Base Directory Specification"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "ISC"
license-files = ["LICENSE"]
keywords = ["xdg", "base", "directory", "specification"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/srstevenson/xdg-base-dirs"
Repository = "https://github.com/srstevenson/xdg-base-dirs"
Issues = "https://github.com/srstevenson/xdg-base-dirs/issues"

[dependency-groups]
dev = [
  "basedpyright>=1.31.1",
  "coverage>=7.6.4",
  "pytest>=7.2.1",
  "ruff>=0.1.6",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.10"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "recommended"

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213", "INP001", "ISC001", "S101"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D"]
